// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Balance sheet tests Balance sheet page displays an empty view when no enough data is available 1`] = `
<div
  class="krxsxy"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="chJYcV"
  >
    <div
      class="fIMGLX"
    >
      <div
        class="hGPUxh"
      >
        <h1
          class="dMSeEr"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="eZSpvY"
        >
          <button
            class="gkIUDe"
            type="button"
          >
            Add new
          </button>
          <button
            class="gkIUDe"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="VoEdK"
  >
    <div
      class="kAAJDj"
    >
      <header
        class="gVqNsd"
      >
        <h2
          class="NOdWh"
        >
          Balances
        </h2>
        <div>
          <nav
            class="bwqJIX"
          >
            <div
              class="bbwRoh"
            >
              all 
            </div>
            <div
              class="nEOmy"
            >
              accounts 1
            </div>
            <div
              class="nEOmy"
            >
              assets 0
            </div>
          </nav>
        </div>
      </header>
      <div
        class="cUhjik"
      >
        <div
          class="dVBxey"
          data-testid="balance-group-cash"
        >
          <div
            class="gvuwTi"
          >
            <p
              class="dLMLA-d"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="emcqkd"
            >
              $0
            </span>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                undefined
              </div>
              <span
                class="jLBuyl"
              >
                $0
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/account/Alice's Checking"
                >
                  Alice's Checking
                </a>
                <div
                  class="gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $0
              </span>
            </div>
          </div>
        </div>
        <div
          class="dVBxey"
          data-testid="balance-group-debt"
        >
          <div
            class="gLywDe"
          >
            <p
              class="dLMLA-d"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="emcqkd"
            >
              $0
            </span>
          </div>
          <div
            class="igaVSX"
          >
            No balances are available in this group
          </div>
        </div>
        <div
          class="dVBxey"
          data-testid="balance-group-investments"
        >
          <div
            class="hRryZV"
          >
            <p
              class="dLMLA-d"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="emcqkd"
            >
              $0
            </span>
          </div>
          <div
            class="igaVSX"
          >
            No balances are available in this group
          </div>
        </div>
        <div
          class="dVBxey"
          data-testid="balance-group-other-assets"
        >
          <div
            class="cPSxPD"
          >
            <p
              class="dLMLA-d"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="emcqkd"
            >
              $0
            </span>
          </div>
          <div
            class="igaVSX"
          >
            No balances are available in this group
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Balance sheet tests Balance sheet page displays the correct data 1`] = `
<div
  class="krxsxy"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="chJYcV"
  >
    <div
      class="fIMGLX"
    >
      <div
        class="hGPUxh"
      >
        <h1
          class="dMSeEr"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="eZSpvY"
        >
          <button
            class="gkIUDe"
            type="button"
          >
            Add new
          </button>
          <button
            class="gkIUDe"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="VoEdK"
  >
    <div
      class="kAAJDj"
    >
      <header
        class="gVqNsd"
      >
        <h2
          class="NOdWh"
        >
          Balances
        </h2>
        <div>
          <nav
            class="bwqJIX"
          >
            <div
              class="bbwRoh"
            >
              all 
            </div>
            <div
              class="nEOmy"
            >
              accounts 7
            </div>
            <div
              class="nEOmy"
            >
              assets 6
            </div>
          </nav>
        </div>
      </header>
      <div
        class="cUhjik"
      >
        <div
          class="dVBxey"
          data-testid="balance-group-cash"
        >
          <div
            class="gvuwTi"
          >
            <p
              class="dLMLA-d"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="emcqkd"
            >
              $10,700
            </span>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                savings
              </div>
              <span
                class="jLBuyl"
              >
                $6,000
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/account/Emergency Fund"
                >
                  Emergency Fund
                </a>
                <div
                  class="gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $6,000
              </span>
            </div>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                checking
              </div>
              <span
                class="jLBuyl"
              >
                $3,400
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/account/Alice's Checking"
                >
                  Alice's Checking
                </a>
                <div
                  class="gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $3,400
              </span>
            </div>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                cash
              </div>
              <span
                class="jLBuyl"
              >
                $1,300
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/account/Wallet"
                >
                  Wallet
                </a>
                <div
                  class="gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $1,300
              </span>
            </div>
          </div>
        </div>
        <div
          class="dVBxey"
          data-testid="balance-group-debt"
        >
          <div
            class="gLywDe"
          >
            <p
              class="dLMLA-d"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="emcqkd"
            >
              -$21,974
            </span>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                credit card
              </div>
              <span
                class="jLBuyl"
              >
                -$724
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/account/Bob's Juggernaut Visa"
                >
                  Bob's Juggernaut Visa
                </a>
                <div
                  class="gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                -$724
              </span>
            </div>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                auto
              </div>
              <span
                class="jLBuyl"
              >
                -$21,250
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/account/Toyota Auto Loan"
                >
                  Toyota Auto Loan
                </a>
                <div
                  class="gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                -$21,250
              </span>
            </div>
          </div>
        </div>
        <div
          class="dVBxey"
          data-testid="balance-group-investments"
        >
          <div
            class="hRryZV"
          >
            <p
              class="dLMLA-d"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="emcqkd"
            >
              $142,831
            </span>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                cryptocurrency
              </div>
              <span
                class="jLBuyl"
              >
                $86,920
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/asset/Bitcoin"
                >
                  Bitcoin
                </a>
                <div
                  class="gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $69,420
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/asset/Ethereum"
                >
                  Ethereum
                </a>
                <div
                  class="gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $17,500
              </span>
            </div>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                security
              </div>
              <span
                class="jLBuyl"
              >
                $33,125
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/asset/Tesla"
                >
                  Tesla
                </a>
                <div
                  class="gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $30,000
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/asset/GameStop"
                >
                  GameStop
                </a>
                <div
                  class="gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $3,125
              </span>
            </div>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                roth
              </div>
              <span
                class="jLBuyl"
              >
                $18,536
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/account/Alice's Roth IRA"
                >
                  Alice's Roth IRA
                </a>
                <div
                  class="gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $18,536
              </span>
            </div>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                401k
              </div>
              <span
                class="jLBuyl"
              >
                $4,251
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/account/Bob's 401k"
                >
                  Bob's 401k
                </a>
                <div
                  class="gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $4,251
              </span>
            </div>
          </div>
        </div>
        <div
          class="dVBxey"
          data-testid="balance-group-other-assets"
        >
          <div
            class="cPSxPD"
          >
            <p
              class="dLMLA-d"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="emcqkd"
            >
              $53,000
            </span>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                vehicle
              </div>
              <span
                class="jLBuyl"
              >
                $38,500
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/asset/2022 Toyota RAV4"
                >
                  2022 Toyota RAV4
                </a>
                <div
                  class="gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $38,500
              </span>
            </div>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                collectible
              </div>
              <span
                class="jLBuyl"
              >
                $14,500
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/asset/Pokemon Card Collection"
                >
                  Pokemon Card Collection
                </a>
                <div
                  class="gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $14,500
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Balance sheet tests Balance sheet page displays the correct data 2`] = `
<div
  class="krxsxy"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="chJYcV"
  >
    <div
      class="fIMGLX"
    >
      <div
        class="hGPUxh"
      >
        <h1
          class="dMSeEr"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="eZSpvY"
        >
          <button
            class="gkIUDe"
            type="button"
          >
            Add new
          </button>
          <button
            class="gkIUDe"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="VoEdK"
  >
    <div
      class="kAAJDj"
    >
      <header
        class="gVqNsd"
      >
        <h2
          class="NOdWh"
        >
          Balances
        </h2>
        <div>
          <nav
            class="bwqJIX"
          >
            <div
              class="nEOmy"
            >
              all 
            </div>
            <div
              class="bbwRoh"
            >
              accounts 7
            </div>
            <div
              class="nEOmy"
            >
              assets 6
            </div>
          </nav>
        </div>
      </header>
      <div
        class="cUhjik"
      >
        <div
          class="dVBxey"
          data-testid="balance-group-cash"
        >
          <div
            class="gvuwTi"
          >
            <p
              class="dLMLA-d"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="emcqkd"
            >
              $10,700
            </span>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                savings
              </div>
              <span
                class="jLBuyl"
              >
                $6,000
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/account/Emergency Fund"
                >
                  Emergency Fund
                </a>
                <div
                  class="gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $6,000
              </span>
            </div>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                checking
              </div>
              <span
                class="jLBuyl"
              >
                $3,400
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/account/Alice's Checking"
                >
                  Alice's Checking
                </a>
                <div
                  class="gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $3,400
              </span>
            </div>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                cash
              </div>
              <span
                class="jLBuyl"
              >
                $1,300
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/account/Wallet"
                >
                  Wallet
                </a>
                <div
                  class="gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $1,300
              </span>
            </div>
          </div>
        </div>
        <div
          class="dVBxey"
          data-testid="balance-group-debt"
        >
          <div
            class="gLywDe"
          >
            <p
              class="dLMLA-d"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="emcqkd"
            >
              -$21,974
            </span>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                credit card
              </div>
              <span
                class="jLBuyl"
              >
                -$724
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/account/Bob's Juggernaut Visa"
                >
                  Bob's Juggernaut Visa
                </a>
                <div
                  class="gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                -$724
              </span>
            </div>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                auto
              </div>
              <span
                class="jLBuyl"
              >
                -$21,250
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/account/Toyota Auto Loan"
                >
                  Toyota Auto Loan
                </a>
                <div
                  class="gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                -$21,250
              </span>
            </div>
          </div>
        </div>
        <div
          class="dVBxey"
          data-testid="balance-group-investments"
        >
          <div
            class="hRryZV"
          >
            <p
              class="dLMLA-d"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="emcqkd"
            >
              $22,786
            </span>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                roth
              </div>
              <span
                class="jLBuyl"
              >
                $18,536
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/account/Alice's Roth IRA"
                >
                  Alice's Roth IRA
                </a>
                <div
                  class="gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $18,536
              </span>
            </div>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                401k
              </div>
              <span
                class="jLBuyl"
              >
                $4,251
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/account/Bob's 401k"
                >
                  Bob's 401k
                </a>
                <div
                  class="gmlXoT"
                >
                  Account
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $4,251
              </span>
            </div>
          </div>
        </div>
        <div
          class="dVBxey"
          data-testid="balance-group-other-assets"
        >
          <div
            class="cPSxPD"
          >
            <p
              class="dLMLA-d"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="emcqkd"
            >
              $0
            </span>
          </div>
          <div
            class="igaVSX"
          >
            No balances are available in this group
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Balance sheet tests Balance sheet page displays the correct data 3`] = `
<div
  class="krxsxy"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="chJYcV"
  >
    <div
      class="fIMGLX"
    >
      <div
        class="hGPUxh"
      >
        <h1
          class="dMSeEr"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="eZSpvY"
        >
          <button
            class="gkIUDe"
            type="button"
          >
            Add new
          </button>
          <button
            class="gkIUDe"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="VoEdK"
  >
    <div
      class="kAAJDj"
    >
      <header
        class="gVqNsd"
      >
        <h2
          class="NOdWh"
        >
          Balances
        </h2>
        <div>
          <nav
            class="bwqJIX"
          >
            <div
              class="nEOmy"
            >
              all 
            </div>
            <div
              class="nEOmy"
            >
              accounts 7
            </div>
            <div
              class="bbwRoh"
            >
              assets 6
            </div>
          </nav>
        </div>
      </header>
      <div
        class="cUhjik"
      >
        <div
          class="dVBxey"
          data-testid="balance-group-cash"
        >
          <div
            class="gvuwTi"
          >
            <p
              class="dLMLA-d"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="emcqkd"
            >
              $0
            </span>
          </div>
          <div
            class="igaVSX"
          >
            No balances are available in this group
          </div>
        </div>
        <div
          class="dVBxey"
          data-testid="balance-group-debt"
        >
          <div
            class="gLywDe"
          >
            <p
              class="dLMLA-d"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="emcqkd"
            >
              $0
            </span>
          </div>
          <div
            class="igaVSX"
          >
            No balances are available in this group
          </div>
        </div>
        <div
          class="dVBxey"
          data-testid="balance-group-investments"
        >
          <div
            class="hRryZV"
          >
            <p
              class="dLMLA-d"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="emcqkd"
            >
              $120,045
            </span>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                cryptocurrency
              </div>
              <span
                class="jLBuyl"
              >
                $86,920
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/asset/Bitcoin"
                >
                  Bitcoin
                </a>
                <div
                  class="gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $69,420
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/asset/Ethereum"
                >
                  Ethereum
                </a>
                <div
                  class="gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $17,500
              </span>
            </div>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                security
              </div>
              <span
                class="jLBuyl"
              >
                $33,125
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/asset/Tesla"
                >
                  Tesla
                </a>
                <div
                  class="gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $30,000
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/asset/GameStop"
                >
                  GameStop
                </a>
                <div
                  class="gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $3,125
              </span>
            </div>
          </div>
        </div>
        <div
          class="dVBxey"
          data-testid="balance-group-other-assets"
        >
          <div
            class="cPSxPD"
          >
            <p
              class="dLMLA-d"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="emcqkd"
            >
              $53,000
            </span>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                vehicle
              </div>
              <span
                class="jLBuyl"
              >
                $38,500
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/asset/2022 Toyota RAV4"
                >
                  2022 Toyota RAV4
                </a>
                <div
                  class="gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $38,500
              </span>
            </div>
          </div>
          <div
            class="jktFQO"
          >
            <div
              class="cgurVW"
            >
              <div
                class="ccUmfv"
              >
                collectible
              </div>
              <span
                class="jLBuyl"
              >
                $14,500
              </span>
            </div>
            <div
              class="hVgZl"
            >
              <div>
                <a
                  class="ilCmOc"
                  href="#/asset/Pokemon Card Collection"
                >
                  Pokemon Card Collection
                </a>
                <div
                  class="gmlXoT"
                >
                  Asset
                </div>
              </div>
              <span
                class="Ihpmn"
              >
                $14,500
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
